--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,33 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# Eclipse files.
+.project
+.classpath
+.settings/
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+
 # Package Files #
 *.jar
 *.war
 *.ear
+.idea
+*.iml
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Log files
+*.log
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
